tests/idris2/error/error034/Issue3692.idr
bad : Bool -> ()
bad True = ()

namespace X
  foo : ()
  foo = ()

mutual
  bar : ()
  bar = baz

  baz : ()
  baz = bar
